# optimizely-rust-sdk

./: Cargo.toml
examples/performance-test/src/: main.go  main.js  main.py  main.rs
examples/results-demo/src/: main.rs
examples/srm-test/: Cargo.toml
examples/srm-test/src/: main.rs
optimizely/: Cargo.toml
optimizely/src/: client.rs  conversion.rs  datafile.rs  decision.rs  event_api.rs  lib.rs
optimizely/src/client/: initialization.rs  user.rs
optimizely/src/datafile/: event.rs  experiment.rs  feature_flag.rs
optimizely/src/event_api/: batched_event_dispatcher.rs  client.rs  event.rs  simple_event_dispatcher.rs  trait_event_dispatcher.rs
optimizely/src/event_api/request/: event.rs  payload.rs  snapshot.rs  visitor.rs
optimizely/tests/: decisions.rs  user_context.rs
optimizely/tests/common/: mod.rs
