[package]
name = "optimizely"
version = "0.3.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
thiserror = "1.0"
error-stack = "0.5"
fasthash = "0.4"
log = "0.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.ureq]
version = "2.10"
optional = true

[dependencies.uuid]
version = "1.10"
features = ["v4", "fast-rng"]

[features]
online = ["dep:ureq"]
